# Text2SQL

./: .env  .gitignore  CLAUDE.md  README.md  architecture.drawio
llm_pipeline/: pyproject.toml
llm_pipeline/config/: semantic_layer.yaml
llm_pipeline/config/prompts/: sql_generator_prompt.txt
llm_pipeline/docker/: docker-compose.yml
llm_pipeline/scripts/: init_db.sql  seed_test_data.sql
llm_pipeline/src/: config.py  session_logger.py
llm_pipeline/src/api/: app.py  routes.py  websocket.py
llm_pipeline/src/cache/: redis_cache.py
llm_pipeline/src/data_access/: audit.py  connection.py
llm_pipeline/src/knowledge/: bootstrap.py  example_store.py  semantic_layer.py  vector_store.py
llm_pipeline/src/llm/: anthropic_provider.py  base.py  factory.py  openai_compatible_provider.py
llm_pipeline/src/models/: schemas.py
llm_pipeline/src/monitoring/: langfuse_tracer.py
llm_pipeline/src/pipeline/: executor.py  graph.py  router.py  schema_linker.py  self_correction.py  sql_generator.py  state.py  validator.py
llm_pipeline/src/rag/: chunking.py  embedding.py
llm_pipeline/tests/: test_api.py  test_cache.py  test_e2e.py  test_knowledge.py  test_pipeline_graph.py  test_router.py  test_self_correction.py  test_sql_generator.py  test_validator.py
llm_pipeline/ui/: streamlit_app.py
rag_single_agent/: README.md  gen_data.py  pyproject.toml
rag_single_agent/config/: golden_queries.json  semantic_layer.yaml
rag_single_agent/config/prompts/: system_prompt.txt
rag_single_agent/data/: query.json  schema.json
rag_single_agent/scripts/: evaluate.py  index_schema.py  init_db.sql
rag_single_agent/src/: config.py  session_logger.py
rag_single_agent/src/agent/: agent.py  prompt_builder.py  response_parser.py
rag_single_agent/src/api/: app.py  routes.py  websocket.py
rag_single_agent/src/data_access/: audit.py  connection.py
rag_single_agent/src/knowledge/: example_store.py  semantic_layer.py  vector_store.py
rag_single_agent/src/llm/: anthropic_provider.py  base.py  factory.py  openai_compatible_provider.py
rag_single_agent/src/models/: schemas.py
rag_single_agent/src/rag/: chunking.py  embedding.py  retrieval.py
rag_single_agent/src/tools/: execute_sql.py  (+3 more)
rag_single_agent/tests/: test_agent.py  test_api.py  test_e2e.py  test_knowledge.py  test_llm_provider.py  test_rag_retrieval.py  test_session_logger.py  test_tools.py
rag_single_agent/ui/: streamlit_app.py
(+37 files in other folders)
