[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "text2sql-pipeline"
version = "0.2.0"
description = "Text-to-SQL LLM-in-the-middle Pipeline for Banking/POS (Phase 2)"
requires-python = ">=3.11"
dependencies = [
    # LLM
    "anthropic>=0.40",
    "openai>=1.0",
    # Orchestration
    "langgraph>=0.2",
    # API
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "websockets>=12.0",
    # Database
    "asyncpg>=0.29",
    # Embedding
    "sentence-transformers>=2.2",
    # SQL parsing
    "sqlparse>=0.5",
    # Validation & config
    "pydantic>=2.5",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    # Cache
    "redis>=5.0",
    # Monitoring
    "langfuse>=2.0",
    # UI
    "streamlit>=1.38",
    # HTTP client
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end tests requiring real LLM API and PostgreSQL (deselect with '-m not e2e')",
]
addopts = "-m 'not e2e'"

[tool.ruff]
target-version = "py311"
line-length = 120
